# space_craft_production

./: .coverage  .cursorrules  .gitignore  CLAUDE.md  ML_INTEGRATION_PLAN.md  PLANOGRAM_REFACTORING_COMPLETED.md  PLANOGRAM_REFACTORING_PLAN.md  REFACTORING_COMPLETED.md  SETUP.md  TODO.md  TURBOREPO_MIGRATION_PLAN.md  VERCEL_SETUP.md  api-contracts.md  build.sh  check.sh  conftest.py  db.sqlite3  factories.py  manage.py  nextjs-structure.md  openapi.yaml  pyproject.toml  pytest.ini  python.md  requirements-dev.txt  requirements.txt  start-dev.sh  start.sh  steps 2.md  steps-old.md  steps-v2.md  steps.md  test_openapi_schema.py  view-logs.sh
.cursor/rules/: django.mdc  general-workflow.mdc  linting.mdc  nextjs-structure.mdc  python.mdc  react-testing-library.mdc  react-typescript.mdc  typescript.mdc  zod.mdc
accounts/: admin.py  authentication.py  models.py  permissions.py  serializers.py  test_views.py  test_views.py.bak  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_and_more.py
accounts/services/: __init__.py  user_service.py
common/: __init__.py  apps.py  exceptions.py  mixins.py  permissions.py  serializers.py  viewsets.py
displays/: admin.py  apps.py  models.py  serializers.py  test_views.py  urls.py  views.py
displays/migrations/: 0001_initial.py  0002_add_display_category_column.py  0002_display_is_standard_alter_display_company.py  0003_auto_20251114_1628.py  0003_remove_is_archived_column.py  0004_create_standard_displays.py  0004_unify_displays.py  0005_remove_standarddisplay_table.py  0005_update_standard_displays_defaults.py  0006_add_display_category.py  0006_populate_shelf_spacing_defaults.py  0007_refactor_standard_shelves.py  0008_cleanup_old_standard_shelves.py  0009_reduce_standard_displays_to_six.py
front-end/: .gitignore  package-lock.json  package.json  proxy.ts  tsconfig.json  turbo.json  vitest.setup.ts
front-end/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
front-end/app/: layout.tsx  page.tsx  providers.tsx
front-end/components/: AdminOnly.tsx  AuthProvider.tsx  AuthenticatedLayout.tsx  DetailField.tsx  EmptyState.tsx  Navbar.tsx  ThemeToggle.tsx  UserMenu.tsx
front-end/coverage/: coverage-final.json  index.html
front-end/hooks/: useCategories.ts  useFetch.ts  useIsAdmin.ts  useMutation.ts  usePaginatedFetch.ts  useRequireAdmin.ts
front-end/lib/: axios.ts  navigation.ts  planogramCSV.test.ts  planogramCSV.ts  utils.ts
front-end/stores/: authStore.ts  planogramAIStore.ts  planogramAvailableProductsStore.ts  planogramDownloadStore.ts  planogramFormStore.ts  planogramLayoutStore.ts  (+3 more)
logs/: README.md
planograms/: apps.py  models.py  serializers.py  test_gap_filling.py  test_views.py  tests.py  urls.py  views.py
products/: serializers.py  services.py  urls.py  views.py
projects/: models.py  serializers.py  test_views.py  urls.py  views.py
spacecraft/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
stores/: models.py  serializers.py  services.py  test_views.py  urls.py  views.py
(+1646 files in other folders)
