[project]
name = "space-craft"
version = "0.1.0"
description = ""
authors = [
    {name = "Coding Addict",email = "johnsmilga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.15.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "schemathesis (>=3.27.0,<4.0.0)",
    "openapi-core (>=0.19.0,<0.20.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "pytest-django (>=4.9.0,<5.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "space_craft", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["spacecraft", "accounts", "displays", "planograms", "products", "projects", "stores"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["migrations/", "node_modules/", ".venv/"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "spacecraft.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "spacecraft.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing --no-cov-on-fail"
testpaths = ["tests", "accounts/tests", "displays/tests", "planograms/tests", "projects/tests", "stores/tests"]
